# udjat-watcher

./: .gitignore  Makefile.in  README.md  configure.ac  devel.xml  run.sh  valgrind.suppression  watcher.cbp
.github/workflows/: codeql.yml  msys2.yml
src/include/: config.h.in  host.h  indicator.h
src/include/udjat/linux/: notification.h
src/main/: host.cc  indicator.cc  main.cc
src/os/linux/: indicator.cc  notification.cc
src/os/windows/: app-manifest.xml.in  indicator.cc  resources.h  resources.rc.in
win/: build.sh  ci-build.sh  netwatcher.nsi.in
xml.d/: 00-defaults.xml
